--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "vue-router": "^3.5.1"
   }
 }
