--- a/package.json
+++ b/package.json
@@ -87,11 +87,16 @@
     "typescript": "^4.1.2",
     "vscode-test": "^1.4.1",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "less": "^4.0.0",
+    "less-loader": "5.0.0",
+    "vue-template-compiler": "^2.6.10",
+    "@vue/cli-plugin-typescript": "^4.4.0"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "fs-extra": "^9.0.1",
-    "vue-router": "^3.5.1"
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.5.1",
+    "vue-class-component": "^7.2.3"
   }
 }
